acrp design change

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 							</a>                                
 						</div>
 						<div class="p-inner">
-							<h4><a href="https://drive.google.com/file/d/1xi_KbzZoOhS4pc9x572FacMhpvXeiVZW/view?usp=sharing">Baggage Buddy (ACRP Design Challenge)</a></h4>
+							<h4><a href="https://www.notion.so/ACRP-Design-Challenge-Case-Study-1eda000f28da81c3aa68da2ab06214ef?pvs=4">Baggage Buddy (ACRP Design Challenge)</a></h4>
 							<div class="cat">Product Innovation & Management</div>
 						</div>
 					</div>
