broadwalk project added

--- a/index.html
+++ b/index.html
@@ -164,6 +164,24 @@
 							<div class="cat">Product Innovation and Management</div>
 						</div>
 					</div>
+					<div class="single-portfolio col-sm-4 all mockup">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="./images/Picture1.jpg" alt="">
+							</div>
+							<a href="images/p6.jpg" class="img-pop-up">  
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a>                                
+						</div>
+						<div class="p-inner">
+							<h4><a href="https://agri-save-git-main-jomar-thomas-almontes-projects.vercel.app/">Stone Valley Boardwalk Trail Project</a></h4>
+							<h5><a href="https://www.linkedin.com/in/aayush-singh-027184160/overlay/projects/1178747039/multiple-media-viewer/?profileId=ACoAACZ37x8BG54dhKECvMpU3VHTBzrFS4Vf3gk&treasuryMediaId=1734198051767">Documentation</a></h5>
+							<div class="cat">Project Management</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
