documentation changes (acrp & svra)

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 							</a>                                
 						</div>
 						<div class="p-inner">
-							<h4><a href="https://www.notion.so/ACRP-Design-Challenge-Case-Study-1eda000f28da81c3aa68da2ab06214ef?pvs=4">Baggage Buddy (ACRP Design Challenge)</a></h4>
+							<h4><a href="https://dust-popcorn-2e9.notion.site/ACRP-Design-Challenge-Case-Study-1eda000f28da81c3aa68da2ab06214ef?pvs=4">Baggage Buddy (ACRP Design Challenge)</a></h4>
 							<div class="cat">Product Innovation & Management</div>
 						</div>
 					</div>
@@ -159,8 +159,8 @@
 							</a>                                
 						</div>
 						<div class="p-inner">
-							<h4><a href="https://agri-save-git-main-jomar-thomas-almontes-projects.vercel.app/">AgriSave</a></h4>
-							<h5><a href="https://www.linkedin.com/in/aayush-singh-027184160/overlay/projects/1178747039/multiple-media-viewer/?profileId=ACoAACZ37x8BG54dhKECvMpU3VHTBzrFS4Vf3gk&treasuryMediaId=1734198051767">Documentation</a></h5>
+							<h4><a href="https://agri-save-git-main-jomar-thomas-almontes-projects.vercel.app/">AgriSave</a></h4> 
+							<h5><a href="https://www.linkedin.com/in/aayush-singh-027184160/overlay/projects/1178747039/multiple-media-viewer/?profileId=ACoAACZ37x8BG54dhKECvMpU3VHTBzrFS4Vf3gk&treasuryMediaId=1734198051767">(Documentation)</a></h5>
 							<div class="cat">Product Innovation and Management</div>
 						</div>
 					</div>
@@ -177,8 +177,7 @@
 							</a>                                
 						</div>
 						<div class="p-inner">
-							<h4><a href="https://agri-save-git-main-jomar-thomas-almontes-projects.vercel.app/">Stone Valley Boardwalk Trail Project</a></h4>
-							<h5><a href="https://www.linkedin.com/in/aayush-singh-027184160/overlay/projects/1178747039/multiple-media-viewer/?profileId=ACoAACZ37x8BG54dhKECvMpU3VHTBzrFS4Vf3gk&treasuryMediaId=1734198051767">Documentation</a></h5>
+							<h4><a href="https://dust-popcorn-2e9.notion.site/Revitalizing-Accessibility-and-Sustainability-The-SVRA-Boardwalk-Replacement-Project-1f4a000f28da8104a2edd6787317558c?pvs=4">Stone Valley Boardwalk Trail Project</a></h4>
 							<div class="cat">Project Management</div>
 						</div>
 					</div>
