--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 							</a>                                
 						</div> 
 						<div class="p-inner">
-							<h4><a href="https://github.com/Amanuttam1192/ModGenix-1">Modgenix (AI interviewer)</a></h4>
-							<div class="cat">AI ML</div>
+							<h4><a href="https://github.com/Amanuttam1192/ModGenix-1">Modgenix <br> (AI interviewer)</a></h4>
+							<div class="cat">AI/ML</div>
 						</div>
 					</div>
 					<div class="single-portfolio col-sm-4 mockup">
@@ -168,7 +168,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="./images/Picture1.jpg" alt="">
+								<img class="image img-fluid" src="./images/ChatGPT Image Jun 2, 2025, 03_36_57 AM.png" alt="">
 							</div>
 							<a href="images/p6.jpg" class="img-pop-up">  
 								<div class="middle">
@@ -177,8 +177,25 @@
 							</a>                                
 						</div>
 						<div class="p-inner">
-							<h4><a href="https://dust-popcorn-2e9.notion.site/Revitalizing-Accessibility-and-Sustainability-The-SVRA-Boardwalk-Replacement-Project-1f4a000f28da8104a2edd6787317558c?pvs=4">Stone Valley Boardwalk Trail Project</a></h4>
+							<h4><a href="https://medium.com/@aayushsingh365/stone-valley-boardwalk-trail-replacement-b83718ce77fb">Stone Valley Boardwalk Trail Project</a></h4>
 							<div class="cat">Project Management</div>
+						</div>
+					</div>
+					<div class="single-portfolio col-sm-4 all mockup">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="./images/ChatGPT Image Jun 2, 2025, 03_42_10 AM.png" alt="">
+							</div>
+							<a href="images/p6.jpg" class="img-pop-up">  
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a>                                
+						</div>
+						<div class="p-inner">
+							<h4><a href="https://aayushsingh365.medium.com/walmart-strategic-analysis-through-a-product-leadership-lens-a5b1bcd6d020">Walmart: Strategic Analysis</a></h4>
+							<div class="cat">Capstone Project</div>
 						</div>
 					</div>
 				</div>
@@ -216,19 +233,25 @@
 
 
 					<h2 class="mb-5">Experience</h2>
-
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> March 2024 - May 2024</span>
 						<h3>Management Consultant Intern</h3>
-						<p>trategically decoded client inefficiencies at Modus to design leaner value chains and power a 10% revenue boost with insights sharper than a pivot table.</p>
+						<p>strategically decoded client inefficiencies at Modus to design leaner value chains and power a 10% revenue boost with insights sharper than a pivot table.</p>
 						<span class="school">Modus Enterprises and Transformation Platform</span>
 					</div>
 
 					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> June 2023 - July 2024</span>
+						<span class="date"><span class="icon-calendar"></span> June 2023 - August 2023</span>
 						<h3>Project Trainee</h3>
 						<p>Engineered a real-time data visualizer from scratch using React and Flask, doubling performance and turning complex vacuum systems into sleek dashboards of clarity</p>
 						<span class="school">Raja Rammanna Center for Advanced Technology</span>
+					</div>
+					
+					<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> February 2022 - August 2022</span>
+						<h3>Project Associate (Web)</h3>
+						<p>Led Agile launch of 10+ client websites, streamlining feedback cycles and driving 20% faster, user-aligned deliveries.</p>
+						<span class="school">Cojective</span>
 					</div>
 				</div>
 			</div>
@@ -252,7 +275,7 @@
 					</p>
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="./images/Aayush Kumar Singh Resume.pdf" class="btn btn-secondary px-4 py-2 btn-sm" download>Download CV</a>
+						<a href="./images/Resume Aayush Kumar Singh.pdf" class="btn btn-secondary px-4 py-2 btn-sm" download>Download CV</a>
 					</p>
 				</div>
 			</div>
@@ -455,10 +478,20 @@
             </div>
         </div>
         <div class="row">
+			<div class="col-md-6 col-lg-4 text-center mb-5">
+                <div class="certification-item site-animate" data-animate-effect="fadeIn">
+                    <span class="icon">
+                        <img src="./images/certified-associate-in-project-management-capm.png" alt="Certification 1" class="img-fluid">
+                    </span>
+                    <h3 class="mb-4">Certified Associate in Project Management (CAPM) </h3>
+                    <p>The Certified Associate in Project Management (CAPM) certification is an entry-level credential administered by the Project Management Institute (PMI). It demonstrates a candidate's foundational understanding of project management knowledge, terminology, and processes.</p>
+                    <p><a href="https://www.credly.com/badges/f6cf1881-f64a-4ab8-82d0-35e6c0f431b6/public_url" class="site-link">View Certificate <i class="icon-chevron-right"></i></a></p>
+                </div>
+            </div>
             <div class="col-md-6 col-lg-4 text-center mb-5">
                 <div class="certification-item site-animate" data-animate-effect="fadeIn">
                     <span class="icon">
-                        <img src="./images/centrestar-logo-175.png" alt="Certification 1" class="img-fluid">
+                        <img src="./images/centrestar-logo-175.png" alt="Certification 2" class="img-fluid">
                     </span>
                     <h3 class="mb-4">CPE 1204 Lean-Sigma Process Improvement Yellow Belt </h3>
                     <p>Issued by Centrestar Academy. CPE 1204 Lean-Sigma Process Improvement Yellow Belt is a 12-hour online course that provides a foundational understanding of Lean Six Sigma principles and tools.</p>
@@ -468,7 +501,7 @@
             <div class="col-md-6 col-lg-4 text-center mb-5">
                 <div class="certification-item site-animate" data-animate-effect="fadeIn">
                     <span class="icon">
-                        <img src="./images/forage cert.png" alt="Certification 2" class="img-fluid">
+                        <img src="./images/forage cert.png" alt="Certification 3" class="img-fluid">
                     </span>
                     <h3 class="mb-4">Siemens Mobility - Project Manager Job Simulation </h3>
                     <p>Issued by Forage and Recognized by Siemens, It is a self-paced Siemens Mobility Project Manager certificate by completing hands-on tasks simulating real-world rail infrastructure project management skills. 
@@ -479,7 +512,7 @@
             <div class="col-md-6 col-lg-4 text-center mb-5">
                 <div class="certification-item site-animate" data-animate-effect="fadeIn">
                     <span class="icon">
-                        <img src="./images/penn state idp.png" alt="Certification 3" class="img-fluid">
+                        <img src="./images/penn state idp.png" alt="Certification 4" class="img-fluid">
                     </span>
                     <h3 class="mb-4">IDP: Project Management Series ﴾PJT‐100﴿</h3>
                     <p>Issued by Penn State. The "PJT-100" refers to a Project Management certificate program offered by Penn State Great Valley. This program provides education that satisfies the requirements for the Project Management Professional (PMP) certification administered by the Project Management Institute (PMI). 
@@ -490,7 +523,7 @@
 			<div class="col-md-6 col-lg-4 text-center mb-5">
                 <div class="certification-item site-animate" data-animate-effect="fadeIn">
                     <span class="icon">
-                        <img src="./images/foundation of pm.png" alt="Certification 3" class="img-fluid">
+                        <img src="./images/foundation of pm.png" alt="Certification 5" class="img-fluid">
                     </span>
                     <h3 class="mb-4">Foundations of Project Management | Google</h3>
                     <p>Issued by Coursera, This fully online project management training provides the skills you need for an entry-level job in project management</p>
