linkedin case study added

--- a/index.html
+++ b/index.html
@@ -194,8 +194,25 @@
 							</a>                                
 						</div>
 						<div class="p-inner">
-							<h4><a href="https://aayushsingh365.medium.com/walmart-strategic-analysis-through-a-product-leadership-lens-a5b1bcd6d020">Walmart: Strategic Analysis</a></h4>
-							<div class="cat">Capstone Project</div>
+							<h4><a href="https://aayushsingh365.medium.com/walmart-strategic-analysis-through-a-product-leadership-lens-a5b1bcd6d020">Walmart Strategic Analysis : A Case Study</a></h4>
+							<div class="cat">Case Study</div>
+						</div>
+					</div>
+					<div class="single-portfolio col-sm-4 all mockup">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="./images/ChatGPT Image Jun 11, 2025, 12_22_28 AM.png" alt="">
+							</div>
+							<a href="images/p6.jpg" class="img-pop-up">  
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a>                                
+						</div>
+						<div class="p-inner">
+							<h4><a href="https://www.canva.com/design/DAGp062Gqws/QfLBTpBPgne-GHdLP0qpBQ/view?utm_content=DAGp062Gqws&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hc2d14f5ceb">Addressing Ghost Job Listings on LinkedIn: A Product Case Study</a></h4>
+							<div class="cat">Case Study</div>
 						</div>
 					</div>
 				</div>
