add prompt engineering cert and sprint sense project

--- a/index.html
+++ b/index.html
@@ -72,6 +72,25 @@
 
 			<div class="filters-content">
 				<div class="row grid">
+					<div class="single-portfolio col-sm-4 all packaging">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="./images/sprintsense logo.png" alt="">
+							</div>
+							<a href="./images/sprintsense logo.png" class="img-pop-up">  
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="" alt=""></div>
+								</div>
+							</a>                                
+						</div>
+						<div class="p-inner">
+							<h4><a href="https://sprintsense.streamlit.app/Overview">SprintSense : The Agile Dashboard</a></h4>
+							<h5><a href="https://www.notion.so/Product-Requirement-Doc-PRD-v0-1-27ea000f28da800e8822d11a74d68331?source=copy_link">(Product Requirements Document)</a></h5>
+
+							<div class="cat">Product Innovation and Management</div>
+						</div>
+					</div>
 					<div class="single-portfolio col-sm-4 packaging">
 						<div class="relative">
 							<div class="thumb">
@@ -545,6 +564,16 @@
                     <h3 class="mb-4">Foundations of Project Management | Google</h3>
                     <p>Issued by Coursera, This fully online project management training provides the skills you need for an entry-level job in project management</p>
                     <p><a href="https://www.coursera.org/account/accomplishments/verify/2GN3CY4XW8F0" class="site-link">View Certificate <i class="icon-chevron-right"></i></a></p>
+                </div>
+            </div>
+			<div class="col-md-6 col-lg-4 text-center mb-5">
+                <div class="certification-item site-animate" data-animate-effect="fadeIn">
+                    <span class="icon">
+                        <img src="./images/prompt engineering.png" alt="Certification 6" class="img-fluid">
+                    </span>
+                    <br><h3 class="mb-4">Prompt Engineering for ChatGPT</h3>
+                    <p>Issued by Coursera, This course introduces students to the patterns and approaches for writing effective prompts for large language models. Anyone can take the course and the only required knowledge is basic computer usage skills, such as using a browser and accessing ChatGPT.</p>
+                    <p><a href="https://www.coursera.org/account/accomplishments/verify/6HO7ZRUN3UNA?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" class="site-link">View Certificate <i class="icon-chevron-right"></i></a></p>
                 </div>
             </div>
         </div>
